# numov

./: '  .gitignore  Cargo.toml  README.md  m_log.csv  movies.db  numov_data.db  temp.json
src/: common.rs  database.rs  lib.rs  library.rs  main.rs  movie.rs  ratings.rs  temp.rs
src/movie_types/: audio_codec.rs  bitdepth.rs  mod.rs  resolution.rs  sub_format.rs  video_codec.rs
