[package]
name = "numov"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0.1"
# reqwest = "0.11.24"
# tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
matroska = "0.26.1"
pbr = "1.1.1"
polars = "0.38.3"
regex = "1.10.3"
rusqlite = { version = "0.31.0", features = ["bundled"] }
select = "0.6.0"
strsim = "0.11.0"
ureq = "2.9.6"
walkdir = "2.4.0"
xxhash-rust = { version = "0.8.10", features = ["const_xxh32"] }
