[package]
name = "numov"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0.1"
matroska = "0.28.0"
pbr = "1.1.1"
polars = "0.38.3"
regex = "1.11.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
select = "0.6.0"
strsim = "0.11.1"
ureq = "2.12.1"
walkdir = "2.5.0"
xxhash-rust = { version = "0.8.15", features = ["const_xxh32"] }
